# agg_sample

./: .gitignore  Makefile  README.md  app.py  md5.py  pyproject.toml
benchmark/: transformer.py
chocorate/abc/: __init__.py  _state.py  configs.py  db.py  handlers.py  setup.py
chocorate/auth/: router.py  utils.py  views.py
chocorate/blockchain/: utils.py
chocorate/executor/: handlers.py  models.py  router.py  views.py
chocorate/graph/: utils.py
chocorate/helthz/: router.py
chocorate/model_hub/: models.py  utils.py
chocorate/resource_manager/: client.py  client2.py  controller.py  docker_client.py  router.py  utils.py
chocorate/system/: models.py  views.py
docker/: neo4j.sh
docs/drafts/: jq.md  k8s.md  setup_eks.md  tutorial_kubeflow.md
fl/: __main__.py  builtins.py  core.py  exceptions.py  loader.py  router.py  store.py
fl/plugins/: __init__.py  app.py  compressors.py  coomunicator.py  protocol.py
infra/k8s_template/: app.yaml  secret.yaml
scripts/: setup_eks.md
