[tool.poetry]
name = "chocorate"
version = "0.0.1"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
sqladmin = "^0.10.1"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
asyncer = "^0.0.2"
kubernetes = "^26.1.0"
boto3 = "^1.26.113"
orjson = "^3.8.10"

[tool.poetry.group.dev.dependencies]
# HTTPやDocker API を叩くときに使用（必須ではない）
requests = "^2.28.1"
requests-unixsocket = "^0.3.0"

[tool.poetry.group.test.dependencies]
# optional = true
pre-commit = ">=2.20,<4.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.3"
mypy = "^0.971"
isort = "^5.10.1"

[tool.poetry.group.docs.dependencies]
# optional = true
mkdocs = "^1.3.1"
mkautodoc = "^0.1.0"
mkdocs-material = "^8.3.9"
pymdown-extensions = "^9.5"
mkdocs-print-site-plugin = "^2.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
  "tests",
]